# ansible-role-tripleo-ovn

./: .gitreview  README.md  ansible.cfg  setup.cfg
meta/: main.yml
